# pdet

./: .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt
p_det_O3/: emulator.py
pdet/: emulator.py  names.py  transform.py
trained_weights/: scaler_HLV_O3.json
